[tool.poetry]
name = "repl_python3_lesson10-geocoding-at-2021"
version = "0.1.0"
description = ""
authors = ["at2021 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geojson = "^2.5.0"
geopandas = "^0.9.0"
pandas = "^1.3.0"
pyproj = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
